--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@reduxjs/toolkit": "^1.4.0",
     "antd": "^5.0.2",
     "axios": "^0.24.0",
+    "crypto-js": "^4.2.0",
     "driver.js": "^0.9.8",
     "history": "^5.0.1",
     "lodash": "^4.17.21",
@@ -16,6 +17,7 @@
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
     "react-intl": "^5.23.0",
+    "react-quill": "^2.0.0",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.0.0",
     "recharts": "^2.1.13"
@@ -43,6 +45,8 @@
     "@emotion/babel-plugin": "^11.3.0",
     "@emotion/babel-preset-css-prop": "^11.2.0",
     "@rollup/plugin-babel": "^5.3.0",
+    "@types/crypto-js": "^4.2.2",
+    "@types/lodash": "^4.17.16",
     "@types/mockjs": "^1.0.2",
     "@types/node": "^16.11.6",
     "@types/react": "^17.0.0",
