--- a/package.json
+++ b/package.json
@@ -6,10 +6,15 @@
     "@emotion/core": "^11.0.0",
     "@emotion/react": "^11.5.0",
     "@reduxjs/toolkit": "^1.4.0",
+    "@types/dompurify": "^3.2.0",
+    "@wangeditor/editor": "^5.1.23",
+    "@wangeditor/editor-for-react": "^1.0.6",
     "antd": "^5.0.2",
     "axios": "^0.24.0",
     "crypto-js": "^4.2.0",
+    "dompurify": "^3.2.4",
     "driver.js": "^0.9.8",
+    "he": "^1.2.0",
     "history": "^5.0.1",
     "lodash": "^4.17.21",
     "mockjs": "^1.1.0",
@@ -17,7 +22,6 @@
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
     "react-intl": "^5.23.0",
-    "react-quill": "^2.0.0",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.0.0",
     "recharts": "^2.1.13"
